storage/spider/spd_trx.cc
@@ -1,4 +1,5 @@
-/* Copyright (C) 2008-2018 Kentoku Shiba
+/* Copyright (C) 2008-2019 Kentoku Shiba
+   Copyright (C) 2019 MariaDB corp
 
   This program is free software; you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -1667,6 +1668,22 @@ int spider_check_and_set_sql_log_off(
   DBUG_RETURN(0);
 }
 
+int spider_check_and_set_wait_timeout(
+  THD *thd,
+  SPIDER_CONN *conn,
+  int *need_mon
+) {
+  int wait_timeout;
+  DBUG_ENTER("spider_check_and_set_wait_timeout");
+
+  wait_timeout = spider_param_wait_timeout(thd);
+  if (wait_timeout > 0)
+  {
+    spider_conn_queue_wait_timeout(conn, wait_timeout);
+  }
+  DBUG_RETURN(0);
+}
+
 int spider_check_and_set_time_zone(
   THD *thd,
   SPIDER_CONN *conn,
@@ -1865,6 +1882,8 @@ int spider_internal_start_trx(
   }
   if (
     (error_num = spider_check_and_set_sql_log_off(thd, conn,
+      &spider->need_mons[link_idx])) ||
+    (error_num = spider_check_and_set_wait_timeout(thd, conn,
       &spider->need_mons[link_idx])) ||
     (sync_autocommit &&
       (error_num = spider_check_and_set_autocommit(thd, conn,
